Updated server.js file for timestamp

--- a/views/index.html
+++ b/views/index.html
@@ -2,14 +2,13 @@
 
 <html>
    <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
+      <title>Timestamp Microservice | Jacqueline Mason</title>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
       <link href="style.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
-    <h1>Timestamp Microservice</h1>
+    <h1>Timestamp Microservice Demo</h1>
     <hr />
     <div class="container">
       <h3>Example Usage:</h3>
@@ -25,7 +24,7 @@
     </div>
     <div class="footer">
       <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+        By <a href="https://github.com/rookiebehaviour/jjmason-timestamp-demo">Jacqueline Mason</a>
       </p>
     </div>
   </body>
